@@ -104,3 +104,5 @@ Version 1.4.1
 * Fixed the bugs of RubyHash#rassoc & RubyHash#key while encountering null objects
 
 * Fixed the bug of RubyEnumerable#sortBy ordering
+
+* Increased acceptable comparators of RubyEnumerable#sort & RubyEnumerable#sortBy
